# quickstart-cpp

./: .gitignore  CONTRIBUTING.md  npm install firebase  readme.md
.github/ISSUE_TEMPLATE/: firebase-cpp-sdk-issue.md  issue.md
.github/workflows/: android.yml  desktop.yml  ios.yml
.google/: packaging.yaml
admob/testapp/: AndroidManifest.xml  CMakeLists.txt  Podfile  build.gradle  google-services.json  gradle.properties  readme.md
admob/testapp/jni/: Android.mk
admob/testapp/src/: common_main.cc  main.h
admob/testapp/testapp/: Info.plist  LaunchScreen.storyboard
admob/testapp/testapp.xcodeproj/: project.pbxproj
admobcpp/include/: admob.h  app.h  banner_view.h  interstitial_ad.h  types.h
admobcpp/src/common/: admob.cpp  app_android.cc  banner_view.cpp  interstitial_ad.cpp  logging.h
admobsample/android_app/: build.gradle
admobsample/android_app/app/: build.gradle
analytics/testapp/: AndroidManifest.xml  CMakeLists.txt  GoogleService-Info.plist  Podfile  build.gradle  google-services.json  proguard.pro  project.properties  readme.md
analytics/testapp/jni/: Android.mk  Application.mk
analytics/testapp/res/layout/: main.xml
analytics/testapp/res/values/: strings.xml
analytics/testapp/src/: common_main.cc  main.h
analytics/testapp/src/android/: android_main.cc
analytics/testapp/src/ios/: ios_main.mm
analytics/testapp/testapp/: Info.plist
analytics/testapp/testapp.xcodeproj/: project.pbxproj
auth/testapp/: AndroidManifest.xml  CMakeLists.txt  Podfile  build.gradle  debug.keystore  google-services-strings.xml  google-services.json  proguard.pro  readme.md
auth/testapp/jni/: Android.mk
auth/testapp/src/: common_main.cc  main.h
auth/testapp/testapp/: Info.plist
auth/testapp/testapp.xcodeproj/: project.pbxproj
database/testapp/: AndroidManifest.xml  CMakeLists.txt  Podfile  build.gradle  readme.md
database/testapp/classes/: AppDelegate.cpp  TicTacToeScene.cpp  TicTacToeScene.h
database/testapp/jni/: Android.mk  Application.mk
database/testapp/src/: common_main.cc
database/testapp/testapp/: Info.plist
demos/TicTacToe/: .gitignore  CMakeLists.txt  readme.md  rebuild_demo.py  run_demo.py  setup_demo.py
demos/TicTacToe/Classes/: AppDelegate.cpp  AppDelegate.h  MainMenuScene.cpp  MainMenuScene.h  TicTacToeLayer.cpp  TicTacToeLayer.h  TicTacToeScene.cpp  TicTacToeScene.h  app_delegate.cc  app_delegate.h  main_menu_scene.cc  main_menu_scene.h  tic_tac_toe_layer.cc  tic_tac_toe_layer.h  tic_tac_toe_scene.cc  tic_tac_toe_scene.h  util.cc  util.cpp  util.h
demos/TicTacToe/game_resources/: CMakeLists.txt
demos/TicTacToe/game_resources/Classes/: app_delegate.cc  main_menu_scene.cc  main_menu_scene.h  tic_tac_toe_layer.cc  tic_tac_toe_layer.h  util.cc  util.h
demos/TicTacToe/game_resources/proj.ios_mac/mac/: main.cpp
demos/TicTacToe/game_resources/proj.linux/: main.cpp
demos/TicTacToe/game_resources/proj.win32/: main.cpp
dynamic_links/testapp/: AndroidManifest.xml  CMakeLists.txt  Podfile  build.gradle  readme.md
dynamic_links/testapp/jni/: Android.mk
dynamic_links/testapp/src/: common_main.cc  main.h
dynamic_links/testapp/testapp/: Info.plist
firestore/testapp/: AndroidManifest.xml  CMakeLists.txt  Podfile  README.md  build.gradle  settings.gradle
firestore/testapp/src/: common_main.cc
firestore/testapp/testapp/: Info.plist
firestore/testapp/testapp.xcodeproj/: project.pbxproj
functions/testapp/: .gitignore  AndroidManifest.xml  CMakeLists.txt  Podfile  build.gradle  readme.md
functions/testapp/functions/: package-lock.json  package.json
functions/testapp/jni/: Android.mk  Application.mk
functions/testapp/res/values/: strings.xml
functions/testapp/src/: common_main.cc
functions/testapp/src/android/: android_main.cc
functions/testapp/src/android/java/com/google/firebase/example/: LoggingUtils.java
functions/testapp/src/ios/: ios_main.mm
functions/testapp/testapp/: Info.plist
functions/testserver/: readme.md
functions/testserver/functions/: index.js
gma/testapp/: AndroidManifest.xml  CMakeLists.txt  Podfile  build.gradle  readme.md
gma/testapp/src/: common_main.cc  main.h
gma/testapp/testapp.xcodeproj/: project.pbxproj
invites/testapp/: AndroidManifest.xml  CMakeLists.txt  GoogleService-Info.plist  Podfile  build.gradle  google-services-strings.xml  google-services.json  readme.md
invites/testapp/jni/: Android.mk  Application.mk
invites/testapp/src/: common_main.cc
invites/testapp/testapp/: Info.plist
messaging/testapp/: AndroidManifest.xml  CMakeLists.txt  Podfile  build.gradle  proguard.pro  readme.md
messaging/testapp/jni/: Android.mk  Application.mk
messaging/testapp/src/: common_main.cc  main.h
messaging/testapp/testapp/: Info.plist
messaging/testapp/testapp.xcodeproj/: project.pbxproj
remote_config/testapp/: AndroidManifest.xml  CMakeLists.txt  Podfile  build.gradle  readme.md
remote_config/testapp/jni/: Android.mk  Application.mk
remote_config/testapp/src/: common_main.cc  main.h
remote_config/testapp/testapp/: Info.plist
scripts/: restore_secrets.py
scripts/build_scripts/: build_testapps.json  build_testapps.py  config_reader.py  python_requirements.txt  utils.py
scripts/build_scripts/android/: install_prereqs.sh
scripts/gha-encrypted/: README
scripts/gha-encrypted/admob/: GoogleService-Info.plist.gpg  google-services.json.gpg
scripts/gha-encrypted/analytics/: GoogleService-Info.plist.gpg  google-services.json.gpg
scripts/gha-encrypted/auth/: GoogleService-Info.plist.gpg  google-services.json.gpg
scripts/gha-encrypted/database/: GoogleService-Info.plist.gpg  google-services.json.gpg
scripts/gha-encrypted/dynamic_links/: GoogleService-Info.plist.gpg  google-services.json.gpg
scripts/gha-encrypted/firestore/: GoogleService-Info.plist.gpg  google-services.json.gpg
scripts/gha-encrypted/functions/: GoogleService-Info.plist.gpg  google-services.json.gpg
scripts/gha-encrypted/gma/: GoogleService-Info.plist.gpg  (+1 more)
storage/testapp/: AndroidManifest.xml  AndroidManifestAutomated.xml  CMakeLists.txt  Podfile  build.gradle  readme.md
(+72 files in other folders)
